<resources>
    <string name="app_name">Lets chat</string>
    <string name="WebClientID">1061527783989-d0f0ccj32im0jbhk2d0199kf5tqfk46t.apps.googleusercontent.com</string>
    <string name="editTextEmailAdresse">Email address</string>
    <string name="login_with_email">Login with Email :</string>
    <string name="or_sign_in_with">or sign in with :</string>
    <string name="asterisks">********</string>
    <string name="tape_your_pass">tape your password</string>
    <string name="USER_EXTRA">USER_EXTRA</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="online_users">Online users :</string>
    <string name="last_messages">Last messages :</string>
    <string name="register_new_account">Register new account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="tape_here_to_register">Tape here to register\nif you don\'t have an account or :</string>
    <string name="please_enter_email">Please enter email…</string>
    <string name="please_enter_pass">Please enter password!</string>
    <string name="login_failed_retry">Login failed! Please try again later</string>
    <string name="pease_enter_username">please enter username</string>


    <string name="fullname">Full name:</string>
    <string name="username">Username :</string>
    <string name="current_city">Current city :</string>
    <string name="should_enter_username">You should enter a user name</string>
    <string name="should_enter_city">Enter your city</string>
    <string name="MainadUnitID">ca-app-pub-3940256099942544/6300978111</string>
    <string name="profileUpdated">Profile updated</string>
    <string name="shows_a_cover_of_the_app">Shows a cover of the app</string>
    <string name="tape_user_name">tape user name</string>
    <string name="tape_you_full_name">tape you full name</string>
    <string name="tape_your_current_city">tape your current city</string>
    <string name="login">Login</string>
    <string name="tape_your_message">tape your message</string>
    <string name="send">Send</string>
    <string name="no_new_messages">no new messages</string>
    <string name="click_to_save_profile_data">click to save profile data</string>
    <string name="username_empty">Username empty</string>
    <string name="city_empty">City empty</string>
    <string name="Updated">Updated</string>
</resources>
