<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Bacon"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/main.appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appBarHeight"
        android:elevation="4dp"
        tools:targetApi="lollipop">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/main.collapsing"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:contentDescription="@string/shows_a_cover_of_the_app"
                android:id="@+id/iv_bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:src="@drawable/cover"
                android:scaleType="fitXY"
                app:layout_collapseMode="parallax"/>


            <Button
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:id="@+id/signOut"
                android:layout_margin="10dp"
                android:layout_gravity="bottom|end"
                android:background="@drawable/ic_signout"/>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/tv_onlineUsers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/online_users" />

        <fragment
            android:id="@+id/fragment_onlineUsers"
            android:name="chat.goulmima.com.letschat.OnlineUsersFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout="@layout/fragment_online_users"
            android:layout_marginTop="40dp"/>

    </FrameLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="@dimen/dimProfilePic"
        android:layout_height="@dimen/dimProfilePic"
        android:src="@drawable/profile"
        app:layout_anchor="@id/main.appbar"
        app:layout_anchorGravity="bottom|center"
        android:layout_marginStart="15dp"
        app:civ_border_width="2dp"
        app:civ_border_color="#f9f7f7"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        android:elevation="6dp"
        tools:targetApi="lollipop" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginBottom="3dp"
        ads:adSize="BANNER"
        ads:adUnitId="@string/MainadUnitID">
    </com.google.android.gms.ads.AdView>

</android.support.design.widget.CoordinatorLayout>